# perfect-day

./: .dockerignore  .gitignore  CLAUDE.md  COMPETITION.md  Makefile  OPUS_INITIAL_PLAN.md  POC_PHASE1_DEPLOYMENT.md  POC_PHASE1_LOCAL_TESTING.md  POC_PHASE1_TODO.md  POC_PHASE2_TODO.md  PORTS.md  README.md  docker-compose.dev.yml  docker-compose.nuc.yml  docker-compose.test.yml  docker-compose.yml  pgadmin-servers.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  e2e.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  celerybeat-schedule.db  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial_schema.py  0002_entry_flagged_tokens.py  0003_google_identity_on_oauth_tokens.py  0004_entry_body_source.py  0005_decouple_events_and_rules.py  0006_drop_legacy_auto_and_per_diary_event_uniqueness.py  0007_cleanup_calendar_events_outside_90day_window.py  0008_regen_modes.py  0009_weather_enrichment.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  database.py  dependencies.py  errors.py  logging.py  photo_crypto.py  security.py
apps/api/app/middleware/: rate_limit.py  request_id.py
apps/api/app/models/: __init__.py
apps/api/app/routers/: health.py
apps/api/app/routers/v1/: auth.py  calendar_events.py  diaries.py  entries.py  integrations.py  photos.py  rules.py  scan.py
apps/api/app/services/: photos.py  tier.py
apps/api/app/workers/: backfill.py  beat_tasks.py  calendar_sync.py  celery_app.py  enrichments.py  hard_delete.py  llm.py  llm_providers.py  open_meteo.py  rules.py  tasks.py  token_refresh.py  tz_utils.py  utils.py
apps/api/tests/: conftest.py
apps/api/tests/fixtures/: factories.py
apps/api/tests/integration/: conftest.py  test_auth_flow.py  test_backfill.py  test_backfill_worker.py  test_calendar_event_unattached.py  test_diaries.py  test_entries.py  test_entry_events.py  test_entry_tier_limits.py  test_google_identity.py  test_google_oauth.py  test_hard_delete.py  test_hard_delete_photos.py  test_llm_live.py  test_photos.py  test_photos_sweeper.py  test_picker_endpoint.py  test_regenerate_endpoint.py  test_rule_backfill.py  test_rule_tier_limit.py  test_rules_endpoint.py  test_rules_evaluation.py  test_scan_loop.py  test_trash.py  test_weather_enrichment.py
apps/api/tests/unit/: test_backfill_chunks.py  test_build_attendees.py  test_calendar_sync.py  test_celery_beat.py  test_config.py  test_enrichments.py  test_id_token_decode.py  test_llm_failover.py  test_llm_fallback.py  test_llm_modes.py  test_llm_prompt.py  test_llm_providers.py  test_llm_validator.py  test_open_meteo.py  test_photo_crypto.py  test_photos_service.py  test_rule_matcher.py  test_security.py  test_tier_worker_helper.py  test_tz_utils.py  test_worker_imports_smoke.py
apps/web/: .env.example  Dockerfile  jest.config.js  jest.setup.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo
apps/web/e2e/: backfill.spec.ts  entry-date-edit.spec.ts  golden-path.spec.ts  manual-entry-form.spec.ts  multi-day-entries.spec.ts  photo-upload.spec.ts  restore-tier-limit.spec.ts  weather-badge.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: GoogleSignInButton.tsx  PhotoLightbox.tsx  PhotoThumbnail.tsx  PhotoUploadButton.tsx  RuleForm.tsx  Spinner.tsx  StatusPanel.tsx  WeatherBadge.tsx
apps/web/src/lib/: api.ts  auth-context.tsx  date.ts  usePolling.ts  weatherIcon.ts
deploy/: cloud.md  cloudflare.md  hybrid.md  nuc-ops.md  nuc.md
deploy/caddy/: Caddyfile  Caddyfile.tmpl  README.md
design/: 01-architecture.md  02-data-model.md  03-api-surface.md  04-llm-integration.md  05-google-oauth-integrations.md  06-scan-worker.md  07-notifications.md  08-security-privacy.md  09-poc-scope.md  10-open-questions.md  README.md  REVIEW-OPEN-ITEMS.md  THREATMODEL.md  ci-cd.md  dns-and-email.md  known-issues.md  observability.md  secrets.md  testing.md  time-and-tz.md
docs/: BACKLOG.md  local-dev.md
docs/superpowers/plans/: 2026-05-25-admin-cli.md  2026-05-25-calendar-entry-p1-schema-worker.md  2026-05-25-calendar-entry-p2-picker.md  2026-05-25-calendar-entry-p3-rules-engine.md  2026-05-28-entry-date-edit.md  2026-05-28-item13-minio-photo-upload.md  2026-05-28-manual-entry-form.md  2026-05-28-multi-day-entries.md  2026-05-29-item16-weather-open-meteo.md  2026-05-29-photos-real-button-global-library-inline-upload.md
docs/superpowers/specs/: 2026-05-23-readme-design.md  2026-05-25-admin-cli-design.md
scripts/: ADMIN_CLI.md  admin.sh  bootstrap-local.sh  gen-secrets.sh  manage.py  seed-minio-bucket.sh  smoke-test.sh  wait-for-healthy.sh
scripts/nuc/: 00-bootstrap.sh  10-secrets.sh  20-deploy.sh  30-backup.sh  40-update.sh  50-rollback.sh  99-teardown.sh  render-caddyfile.sh
(+19 files in other folders)
