[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfect-day-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",   # for alembic sync operations
    # Redis / Celery
    "celery[redis]>=5.4",
    "redis>=5.0",
    # Auth / crypto
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23",
    "cryptography>=43",
    # Google OAuth
    "google-auth>=2.36",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.150",
    "httpx>=0.27",
    # LLM
    "anthropic>=0.37",
    "google-genai>=1.0",
    # Validation / utils
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24",
    "python-dateutil>=2.9",
    "pytz>=2024",
    # Email
    "sendgrid>=6.11",
    # Rate limiting
    "slowapi>=0.1.9",
    "limits>=3.13",
    # Object storage (S3-compatible)
    "boto3>=1.35",
    # Image processing
    "Pillow>=10.4",
    "pillow-heif>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-cov>=5",
    "testcontainers[postgres,redis,minio]>=4",
    "responses>=0.25",
    "vcrpy>=6",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-dateutil",
    "types-pytz",
    "types-python-jose",
    "boto3-stubs[s3]",
    "celery-types",
    "faker>=33",
    "click>=8.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "live: marks tests that call the real Anthropic API (deselected by default; run with -m live)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = [
    "S101",   # allow assert in tests
    "B008",   # FastAPI Depends() in default args is the required pattern
    "B904",   # raise-without-from — stylistic, not enforced in this codebase
    "S110",   # try/except/pass — used for graceful degradation
    "B007",   # loop variable not used in body — acceptable pattern
]

[tool.ruff.lint.per-file-ignores]
"app/models/__init__.py" = ["E501"]   # long SQLAlchemy relationship chains
"app/routers/**/*.py" = ["E501"]      # long FastAPI route definitions
"app/workers/**/*.py" = ["E501"]      # long task/worker logic
"app/core/errors.py" = ["E501"]
"app/routers/health.py" = ["E501"]

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*", "tests/*"]

[tool.coverage.report]
show_missing = true
# fail_under re-enabled in Phase 2 once coverage is meaningful
